edited global css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,4 @@
+/* ./styles/globals.css */
 @tailwind base;
-/* purgecss start ignore */
 @tailwind components;
 @tailwind utilities;
-/* purgecss end ignore */
