--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,11 @@
-/* ./styles/globals.css */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base{
+    body{
+        @apply bg-blue-450 text-gray-300
+    }
+}
